# inspector-bot

./: .env  README.md  database.pt  docker-compose.yml  main.py  pyproject.toml  requirements.txt
core/: __init__.py  pd.py  telegram.py
data/: database.db  database.txt
handlers/: __init__.py  control.py  ct.py  ct_create.py  ct_edit.py  inspector.py  wd.py  wd_create.py  wd_edit.py
misc/: ct.py  ct_create.py  ct_edit.py  wd.py  wd_create.py  wd_edit.py
templates/: __init__.py  control.py  ct.py  ct_create.py  ct_edit.py  wd.py  wd_create.py  wd_edit.py
utils/: config.py  models.py  table.py
utils/filters/: __init__.py  default.py  group.py  user.py
utils/pd/: __init__.py  exception.py
utils/service/: __init__.py  ct_edit.py  deleter.py  inspector.py  wd_edit.py
