[tool.poetry]
name = "lalau guard"
version = "0.2.0"
description = "The guard for lalau project"
authors = ["Your Name <you@example.com>"]
license = "Lalau"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.1"
python-dotenv = "^1.0.0"
pandas = "2.1.0"

[tool.poetry.group.dev.dependencies]
alembic = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
